--- a/client/index.html
+++ b/client/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <title>COMP 1546 - Lab04</title>
+    <title>COMP 1536 - Lab 08</title>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="stylesheet" href="./css/style.css"/>
@@ -314,4 +314,5 @@
       <h3>Created by Robert Vu, 2018.</h3>
     </footer>
     
-  </body></html>
+  </body>
+</html>
